# kwbuilds.ca

./: .env.example  .gitignore  .gitmodules  AGENTS.md  README.md  TODO.md  build.sh  package-lock.json  package.json  setup.sh  vite.config.js  vite.config.ssg.js
backend/: index.js
backend/modules/home/: Posts.js
backend/modules/users/: Posts.js
backend/overrides/auth/: CreateVerifyEmail.js  Enter.js  GetResetPwd.js
backend/overrides/email/: Create.js  Resend.js  Smtp.js
backend/overrides/geo/: Nominatim.js
backend/overrides/home/: Posts.js
backend/overrides/notifications/: Create.js
backend/overrides/posts/: Create.js  Update.js
backend/overrides/static/: Serve.js
frontend/: App.jsx  index.html  index.jsx  index.ssg.jsx
frontend/components/: ActionField.jsx  Hamburger.jsx  Header.jsx  Markdown.jsx  Paper.jsx  Posts.jsx  ProfileCircle.jsx  SocialLinks.jsx  Stasis.jsx  Tag.jsx
frontend/pages/: Auth.jsx  CreatePost.jsx  Home.jsx  Landing.jsx  NotFound.jsx  Notifications.jsx  Post.jsx  ResetPwd.jsx  User.jsx  VerifyEmail.jsx
frontend/utils/: fonts.js  theme.js
scripts/: generate_terminal_icons.py
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
